修改分享功能

--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,8 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 # post_asides:
 # page_asides:
 
+original_url_pre: “原始地址：”
+
 # ----------------------- #
 #   3rd Party Settings    #
 # ----------------------- #
